fixed overlapping errors

--- a/styles/playlist.css
+++ b/styles/playlist.css
@@ -1,7 +1,3 @@
-section {
-    height: 65vh;
-}
-
 .info-containers {
     flex-direction: column;
     align-items: center;
